# rs-api/src/main/resources/swagger-spec.yml
@@ -44,10 +44,6 @@ paths:
           description: "Invalid ID supplied"
           schema:
             $ref: "#/definitions/Product"
-        404:
-          description: "Product not found"
-          schema:
-            $ref: "#/definitions/Product"
     put:
       tags:
       - "product"
@@ -80,14 +76,6 @@ paths:
           description: "Invalid ID supplied"
           schema:
             $ref: "#/definitions/Product"
-        404:
-          description: "Product not found"
-          schema:
-            $ref: "#/definitions/Product"
-        405:
-          description: "Invalid input"
-          schema:
-            $ref: "#/definitions/Product"
 
 definitions:
   RepoProduct:
@@ -108,8 +96,8 @@ definitions:
         type: "string"
       currentPrice:
         $ref: '#/definitions/Price'
-      errorResponse:
-        $ref: '#/definitions/ErrorResponse'
+      response:
+        $ref: '#/definitions/Response'
   Price:
     type: "object"
     properties:
@@ -118,7 +106,7 @@ definitions:
         format: double
       currencyCode:
         type: string
-  ErrorResponse:
+  Response:
     type: "object"
     properties:
       code:
